UI fix, navigation overlaps selection

--- a/src/assets/css/info-style.css
+++ b/src/assets/css/info-style.css
@@ -2,8 +2,8 @@
 .info {
     color: var(--main-color);
     background-color: var(--main-bg-color);
-    min-height: 60vh;
-    max-height: 60vh;
+    min-height: 55vh;
+    max-height: 55vh;
     overflow-y: auto;
     overflow-x: auto;
 }
